api/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ensembl-refget-deployment
  labels:
    ensembl.web.api.name: ensembl-refget
spec:
  replicas: 1
  selector:
    matchLabels:
      ensembl.web.api.name: ensembl-refget
  template:
    metadata:
      labels:
        ensembl.web.api.name: ensembl-refget
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: ensemblweb-pull-secret
      volumes:
        - name: refget-data-vol
          nfs:  
            # TODO: we should consider fallback and overide it in the overlays
            # values for fallback are commented below
            # server: hx-isi-srv-vlan157.ebi.ac.uk
            # path: /nfs/public/ro/enswbsites_codon
            server: hh-isi-srv-vlan1496.ebi.ac.uk
            path: /ifs/public/ro/enswbsites_codon
      containers:
        - name: ensembl-refget
          image: DOCKER_IMAGE
          imagePullPolicy: Always
          command:
            - uvicorn
          args:
            - --host=0.0.0.0
            - --port=8000
            - refget.main:app
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: refget-data-vol
              mountPath: /usr/data
